--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="hello_world">Hello World! Let\'s rock!</string>
 
     <string name="but_crm">CRM</string>
-    <string name="but_json">JSON</string>
+    <string name="but_lib">Lib.</string>
     <string name="but_cashe">Cashe</string>
+
+    <string name="but_json">JSON</string>
 
     <string name="but_read_records">Read rec.</string>
     <string name="but_add_records">Add rec.</string>
