--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
 
     <string name="date_calendar">Date, calendar</string>
     <string name="but_test">Test</string>
+    <string name="but_date_from_dialog">From dialog</string>
 
     <string name="but_crm">CRM</string>
     <string name="but_lib">Lib.</string>
     <string name="but_cashe">Cashe</string>
 
     <string name="but_json">JSON</string>
+
+    <string name="but_ok">OK</string>
 
     <string name="but_read_records">Read rec.</string>
     <string name="but_add_records">Add rec.</string>
@@ -24,5 +27,8 @@
     <string name="but_add_table_column">Add col.</string>
     <string name="but_delete_table_column">Del. col.</string>
     <string name="but_rename_table_column">Ren. col.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
