--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
 
     <string name="but_database">Database</string>
 
+    <string name="but_some_test">Some test</string>
+
     <string name="but_ok">OK</string>
     <string name="but_new">NEW</string>
     <string name="but_edit">EDIT</string>
