--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="but_crm">CRM</string>
     <string name="but_lib">Lib.</string>
     <string name="but_cashe">Cashe</string>
+    <string name="but_sea_fight">Sea fight</string>
 
     <string name="but_json">JSON</string>
 
